GG-11117 List of tasks for test